# zhuanhuan

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.py  converters.py  docker-compose.yml  pyproject.toml  requirements.txt  utilities.py
metadata/: ac44d48a-24ab-4e4e-b343-19cfc7c001fb.json  babb6b63-8913-4e4c-9a2d-ee516818aed4.json  d0e56697-9378-466a-8363-6c38f159aa61.json  d77e6926-c925-48c5-8e7a-3ab44445932a.json  f59fb38c-ac91-4566-a838-16e803454069.json
results/: QIWusFF4b40Oa42e289f0b6a01a441c0ce72fb6145fe_79076583-22bf-40f0-bf8c-4857c522db50.docx  QIWusFF4b40Oa42e289f0b6a01a441c0ce72fb6145fe_b52bdd78-f735-4831-8421-d32f34e226b4.txt
results/669e4f23-671e-4280-8bc6-bbfff53321d5/: SmJFSe16nIVPa42e289f0b6a01a441c0ce72fb6145fe.pptx
results/babb6b63-8913-4e4c-9a2d-ee516818aed4/: 测试pdf_扫描版.docx
uploads/064e07e9-2739-4c2e-ad63-1056c583d42c/: lpFW0mWhsP2q084a47c8d626c876badd6c6aa6e7aa8d.docx
